--- a/doc/latex/main.tex
+++ b/doc/latex/main.tex
@@ -37,7 +37,7 @@ Notes on the Biot Savart law.
   \item it is \textbf{tangential} to the current direction.
 \end{itemize}
 
-\section{Biot Savart law}
+\subsection{Biot Savart law}
 \paragraph{} The Biot Savart law is used to compute the magnetic field (\textit{Bfield}) produced by
 \textbf{steady} a current in a \textbf{straight} portion of a wire. Complex current paths are computed
 by decomposing in \textbf{small wire portions}, called $\vec{dl}$.
@@ -61,6 +61,24 @@ This forumla clearly shows:
 \begin{center}
   \includegraphics[keepaspectratio=true, width=1.\textwidth]{../dia/bfield_integration/main.jpg}
 \end{center}
+
+\subsection{Solenoid B field approximation}
+\paragraph{} At the \textbf{center} of \textbf{long} a solenoid (that is, whose length is greater than
+diameter), the B field can be approximated with the formula:
+\begin{center}
+  \framebox[3in][c]{$B = \mu \times n \times l $}
+\end{center}
+where:
+\begin{itemize}
+  \item $\mu$ the medium permeability,
+  \item $n$ the turn density,
+  \item $l$ the solenoid length.
+\end{itemize}
+
+\begin{center}
+  \includegraphics[keepaspectratio=true, width=1.\textwidth]{../pics/solenoid_bfield_approx.jpg}
+\end{center}
+
 
 %%
 \newpage
